--- a/Web/Properties/launchSettings.json
+++ b/Web/Properties/launchSettings.json
@@ -4,8 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5433",
-      "sslPort": 44396
+      "applicationUrl": "http://localhost:5433"
     }
   },
   "profiles": {
