--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -9,6 +9,12 @@
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5433;Database=users;Username=postgres;Password=1;SSL Mode=Disable; Timeout=1024"
 
+    },
+    "CorsPolicy": {
+        "AllowedAddresses": [
+            "http://192.168.5.32/",
+            "https://localhost/"
+        ]
     }
 }
 
