--- a/Web/Properties/launchSettings.json
+++ b/Web/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5433"
+      "applicationUrl": "http://192.168.5.32:5433"
     }
   },
   "profiles": {
@@ -13,7 +13,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5433",
+      "applicationUrl": "http://192.168.5.32:5433",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -23,7 +23,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5433",
+      "applicationUrl": "http://192.168.5.32:5433",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -32,7 +32,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
         "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5433",
+      "applicationUrl": "http://192.168.5.32:5433",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
