--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -6,7 +6,9 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5433;Database=users;Username=postgres;Password=1;SSL Mode=Disable; Timeout=1024"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=users;Username=postgres;Password=1;SSL Mode=Disable; Timeout=1024"
+    },
+    "ApplicationHost": {
+        "Address": "http://192.168.5.32:5433"
     }
-
 }
