--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -10,5 +10,8 @@
     },
     "ApplicationHost": {
         "Address": "http://192.168.5.32:5433"
+    },
+    "JWT": {
+        "Key": "verysecretverysecretverysecretkeykeykey"
     }
 }
