--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,8 +7,11 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5433;Database=users;Username=postgres;Password=1;SSL Mode=Disable; Timeout=1024"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=users;Username=postgres;Password=1;SSL Mode=Disable; Timeout=1024"
 
+    },
+    "ApplicationHost": {
+        "Address": "http://192.168.5.32:5433"
     },
     "CorsPolicy": {
         "AllowedAddresses": [
