--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -12,6 +12,8 @@
         "Address": "http://192.168.5.32:5433"
     },
     "JWT": {
-        "Key": "verysecretverysecretverysecretkeykeykey"
+        "Key": "verysecretverysecretverysecretkeykeykey",
+        "Issuer": "yourIssuer",
+        "Audience": "yourAudience"
     }
 }
