--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -11,7 +11,12 @@
 
     },
     "ApplicationHost": {
-        "Address": "http://192.168.5.32:5433"
+        "Address": "http://192.168.5.32:5000"
+    },
+    "JWT": {
+        "Key": "verysecretverysecretverysecretkeykeykey",
+        "Issuer": "yourIssuer",
+        "Audience": "yourAudience"
     },
     "CorsPolicy": {
         "AllowedAddresses": [
