add token in config

--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -14,6 +14,7 @@
     "JWT": {
         "Key": "verysecretverysecretverysecretkeykeykey",
         "Issuer": "yourIssuer",
-        "Audience": "yourAudience"
+        "Audience": "yourAudience",
+        "Token" :  "jwt"
     }
 }
