--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -16,7 +16,8 @@
     "JWT": {
         "Key": "verysecretverysecretverysecretkeykeykey",
         "Issuer": "yourIssuer",
-        "Audience": "yourAudience"
+        "Audience": "yourAudience",
+        "Token": "jwt"
     },
     "CorsPolicy": {
         "AllowedAddresses": [
