token data update

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -17,7 +17,7 @@
         "Key": "verysecretverysecretverysecretkeykeykey",
         "Issuer": "yourIssuer",
         "Audience": "yourAudience",
-        "Token": "jwt"
+        "Token": ""
     },
     "CorsPolicy": {
         "AllowedAddresses": [
