--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -15,6 +15,6 @@
         "Key": "verysecretverysecretverysecretkeykeykey",
         "Issuer": "yourIssuer",
         "Audience": "yourAudience",
-        "Token" :  "jwt"
+        "Token" :  ""
     }
 }
