--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -18,6 +18,12 @@
             "http://192.168.5.32/",
             "https://localhost/"
         ]
+    },
+    "JWT": {
+        "Key": "verysecretverysecretverysecretkeykeykey",
+        "Issuer": "yourIssuer",
+        "Audience": "yourAudience",
+        "Token": ""
     }
 }
 
