--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -15,6 +15,7 @@
         "Key": "verysecretverysecretverysecretkeykeykey",
         "Issuer": "yourIssuer",
         "Audience": "yourAudience",
-        "Token" :  ""
+        "Token": "",
+        "Refresh": ""
     }
 }
