--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -23,7 +23,10 @@
         "Key": "verysecretverysecretverysecretkeykeykey",
         "Issuer": "yourIssuer",
         "Audience": "yourAudience",
-        "Token": ""
+        "Token": "",
+        "Refresh": "",
+        "TokenLifetime": "1"
+
     }
 }
 
