--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -24,9 +24,7 @@
         "Issuer": "yourIssuer",
         "Audience": "yourAudience",
         "Token": "",
-        "Refresh": "",
-        "TokenLifetime": "1"
-
+        "Refresh": ""
     }
 }
 
