--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -13,9 +13,8 @@
     },
     "JWT": {
         "Key": "verysecretverysecretverysecretkeykeykey",
-        "Issuer": "yourIssuer",
-        "Audience": "yourAudience",
-        "Token": "",
-        "Refresh": ""
+        "Issuer": "AuthService",
+        "Audience": "User",
+        "Token": ""
     }
 }
