--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -21,10 +21,9 @@
     },
     "JWT": {
         "Key": "verysecretverysecretverysecretkeykeykey",
-        "Issuer": "yourIssuer",
-        "Audience": "yourAudience",
-        "Token": "",
-        "Refresh": ""
+        "Issuer": "AuthService",
+        "Audience": "User",
+        "Token": ""
     }
 }
 
