--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -16,5 +16,11 @@
         "Issuer": "AuthService",
         "Audience": "User",
         "Token": ""
+    },
+    "RabbitMQ": {
+        "User": "guest",
+        "Password": "guest",
+        "Queue": "messages",
+        "Host": "localhost" 
     }
 }
