--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -24,6 +24,12 @@
         "Issuer": "AuthService",
         "Audience": "User",
         "Token": ""
+    },
+    "RabbitMQ": {
+        "User": "guest",
+        "Password": "guest",
+        "Queue": "messages",
+        "Host": "localhost"
     }
 }
 
