--- a/WebSocketServer/appsettings.Development.json
+++ b/WebSocketServer/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ApplicationHost": {
+        "Address": "http://192.168.5.32:5150"
+    },
+    "RabbitMQ": {
+        "User": "guest",
+        "Password": "guest",
+        "Queue": "messages",
+        "Host": "localhost"
     }
-  }
 }
