--- a/Web/AuthService.csproj
+++ b/Web/AuthService.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="7.2.0" />
+    <PackageReference Include="Uno.UI" Version="5.5.95" />
   </ItemGroup>
 
 </Project>
