--- a/WebSocketServer/appsettings.json
+++ b/WebSocketServer/appsettings.json
@@ -14,5 +14,8 @@
         "Password": "guest",
         "Queue": "messages",
         "Host": "localhost"
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Port=5432;Database=users;Username=postgres;Password=1;SSL Mode=Disable; Timeout=1024"
     }
 }
