--- a/WebSocketServer/appsettings.json
+++ b/WebSocketServer/appsettings.json
@@ -17,5 +17,10 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5432;Database=users;Username=postgres;Password=1;SSL Mode=Disable; Timeout=1024"
+    },
+    "SocketSettings": {
+        "Url": "192.168.5.32",
+        "Port": "5003",
+        "ServicePort": "5000"
     }
 }
