--- a/WebSocketServer/appsettings.Development.json
+++ b/WebSocketServer/appsettings.Development.json
@@ -19,6 +19,7 @@
     },
     "SocketSettings": {
         "Url": "192.168.5.32",
+        "Port": "5001",
         "ServicePort" : "5000"
     }
 }
