--- a/WebSocketServer/appsettings.Development.json
+++ b/WebSocketServer/appsettings.Development.json
@@ -8,6 +8,9 @@
     "ApplicationHost": {
         "Address": "http://192.168.5.32:5149"
     },
+    "WebHost": {
+        "Address": "http://192.168.5.32:5149"
+    },
     "RabbitMQ": {
         "User": "guest",
         "Password": "guest",
@@ -20,6 +23,6 @@
     "SocketSettings": {
         "Url": "192.168.5.32",
         "Port": "5001",
-        "ServicePort" : "5000"
+        "ServicePort": "5000"
     }
 }
