--- a/WebSocketServer/appsettings.json
+++ b/WebSocketServer/appsettings.json
@@ -7,7 +7,10 @@
     },
     "AllowedHosts": "*",
     "ApplicationHost": {
-        "Address": "http://192.168.5.32:5150"
+        "Address": "http://192.168.5.32:5149"
+    },
+    "WebHost": {
+        "Address": "http://192.168.5.32:5149"
     },
     "RabbitMQ": {
         "User": "guest",
