--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -21,6 +21,9 @@
         "User": "guest",
         "Password": "guest",
         "Queue": "messages",
-        "Host": "localhost" 
+        "Host": "localhost"
+    },
+    "UserSettings": {
+        "Role": ""
     }
 }
