--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -30,6 +30,9 @@
         "Password": "guest",
         "Queue": "messages",
         "Host": "localhost"
+    },
+    "UserSettings": {
+        "Role" : ""
     }
 }
 
