--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -32,7 +32,8 @@
         "Host": "localhost"
     },
     "UserSettings": {
-        "Role" : ""
+        "Role": "",
+        "ID": ""
     }
 }
 
