--- a/WebSocketServer/appsettings.Development.json
+++ b/WebSocketServer/appsettings.Development.json
@@ -19,5 +19,8 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5432;Database=users;Username=postgres;Password=1;SSL Mode=Disable; Timeout=1024"
+    },
+    "UserSettings": {
+        "ID": ""
     }
 }
