--- a/WebSocketServer/appsettings.json
+++ b/WebSocketServer/appsettings.json
@@ -22,6 +22,7 @@
         "DefaultConnection": "Host=localhost;Port=5432;Database=users;Username=postgres;Password=1;SSL Mode=Disable; Timeout=1024"
     },
     "UserSettings": {
-        "ID" : ""
+        "ID": "",
+        "Role" : ""
     }
 }
