--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -15,7 +15,6 @@
         "Key": "verysecretverysecretverysecretkeykeykey",
         "Issuer": "AuthService",
         "Audience": "User",
-        "Token": ""
     },
     "RabbitMQ": {
         "User": "guest",
@@ -24,7 +23,6 @@
         "Host": "localhost"
     },
     "UserSettings": {
-        "Role": "",
-        "ID": ""
+        "Role": ""
     }
 }
