--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -14,7 +14,7 @@
     "JWT": {
         "Key": "verysecretverysecretverysecretkeykeykey",
         "Issuer": "AuthService",
-        "Audience": "User",
+        "Audience": "User"
     },
     "RabbitMQ": {
         "User": "guest",
