--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -22,7 +22,7 @@
     "JWT": {
         "Key": "verysecretverysecretverysecretkeykeykey",
         "Issuer": "AuthService",
-        "Audience": "User",
+        "Audience": "User"
     },
     "RabbitMQ": {
         "User": "guest",
